k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service-nodeport
  namespace: my-portfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081  # External port (30000-32767 range)
    protocol: TCP
